--- a/css/output.css
+++ b/css/output.css
@@ -1,3 +1,3 @@
-@import "elementos.css";
-@import "banner.css";
-@import "contenido.css";
+@import "https://elwil001.github.io/mastergym-site/elementos.css";
+@import "https://elwil001.github.io/mastergym-site/banner.css";
+@import "https://elwil001.github.io/mastergym-site/contenido.css";
